--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,7 @@
 JWT_SECRET=supersecretkey
-MONGO_URI=mongodb://bhanusingh2611_db_user:gJqyLe2A9fAAptM7@clusteryoga-shard-00-00.3l6luls.mongodb.net:27017,clusteryoga-shard-00-01.3l6luls.mongodb.net:27017,clusteryoga-shard-00-02.3l6luls.mongodb.net:27017/yogaguru?ssl=true&replicaSet=atlas-3l6luls-shard-0&authSource=admin&retryWrites=true&w=majority
 
-
+PG_HOST=dpg-d6fvf624d50c73df8djg-a
+PG_PORT=5432
+PG_USER=yogaguru_postgres_user
+PG_PASSWORD=zWb2l3cayzAmbT1dVtCfNVtR7QnDQlFx
+PG_DATABASE=yogaguru_postgres
